2007-02-28  Thomas Wood  <thos@gnome.org>

	* www.gnome.org/index.html: FOSDEM has finished for this year.
	Add image about GUADEC call for papers.
	* www.gnome.org/img/flash/guadec-callforpapers.png: Added

2007-02-22  Thomas Wood  <thos@gnome.org>

	* www.gnome.org/index.html: Correct the location of Brussels

2007-02-20  Thomas Wood  <thos@gnome.org>

	* www.gnome.org/index.html: Update "Upcoming Events"

2007-02-06  Mariano Suárez-Alvarez  <mariano@gnome.org>

	* configure.in: add www.gnome.org/projects/tracker/js/Makefile
	which is breaking the build.

2007-02-04  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* configure.in: Add AC_OUTPUT entries for gyrus website.

2007-02-04  Richard Hughes  <richard@hughsie.com>

	* www.gnome.org/projects/gnome-power-manager/bugs.html:
	* www.gnome.org/projects/gnome-power-manager/gpm.html:
	* www.gnome.org/projects/gnome-power-manager/gpp.html:
	* www.gnome.org/projects/gnome-power-manager/hal.html:
	* www.gnome.org/projects/gnome-power-manager/index.html:
	* www.gnome.org/projects/gnome-power-manager/packages.html:
	Update the copyright links, and point to svn, not CVS.

2007-01-19  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* www.gnome.org/projects/hipo/index.html:
	* www.gnome.org/projects/index.html:
	update a couple of links.

2007-01-19  Pedro Villavicencio Garrido  <pvillavi@gnome.org>

	* configure.in:
	* www.gnome.org/projects/Makefile.am:
	* www.gnome.org/projects/hipo/Makefile.am:
	* www.gnome.org/projects/hipo/hipo.css:
	* www.gnome.org/projects/hipo/images/Makefile.am:
	* www.gnome.org/projects/hipo/index.html:
	* www.gnome.org/projects/hipo/screenshots.html:
	* www.gnome.org/projects/index.html: 
	Add the hipo project website.

2007-01-18  Boyd Timothy  <btimothy@gmail.com>

	* configure.in:
	* www.gnome.org/projects/index.html:
	* www.gnome.org/projects/Makefile.am:
	* www.gnome.org/projects/tomboy/*:
	* www.gnome.org/projects/tomboy/images/*: Add the tomboy project
	website
