@@ -1,5 +1,9 @@
 2007-02-28  Thomas Wood  <thos@gnome.org>
 
+	* www.gnome.org/index.html: Add information about Guademy
+
+2007-02-28  Thomas Wood  <thos@gnome.org>
+
 	* www.gnome.org/index.html: FOSDEM has finished for this year.
 	Add image about GUADEC call for papers.
 	* www.gnome.org/img/flash/guadec-callforpapers.png: Added
